--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,107 @@
+:root {
+  --color-grey-light-1: #faf9f9;
+  --color-grey-light-2: #f4f2f2;
+  --color-grey-light-3: #f0eeee;
+  --color-grey-light-4: #ccc;
+  --color-grey-dark-1: #1C1B1F;
+  --color-grey-dark-2: #333;
+  --color-grey-dark-3: #777;
+  --color-grey-dark-4: #999;
+  --color-primary: #512DA8; }
+
+* {
+  padding: 0;
+  margin: 0; }
+
+*::after, *::before, * {
+  box-sizing: inherit; }
+
+html {
+  scroll-behavior: smooth;
+  box-sizing: border-box;
+  font-size: 100%; }
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+  font-weight: 400;
+  font-size: 16px; }
+  @media only screen and (max-width: 900px) {
+    body {
+      font-size: 16px; } }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+.app {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 4rem 0; }
+  .app .calculator {
+    font-family: 'Roboto', sans-serif;
+    border: 1px solid var(--color-grey-light-4);
+    border-radius: .75rem;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--color-grey-light-1);
+    padding: 1rem .75rem;
+    padding-bottom: 1.75rem; }
+    .app .calculator .row {
+      padding: .75rem;
+      padding-bottom: 0;
+      width: 100%;
+      display: flex; }
+      .app .calculator .row .col {
+        width: 25%;
+        margin-left: .5rem; }
+        .app .calculator .row .col:first-child {
+          margin-left: 0; }
+        .app .calculator .row .col.zero {
+          width: 50%; }
+        .app .calculator .row .col .digit {
+          width: 3.5rem;
+          height: 3.5rem;
+          border-radius: .75rem;
+          font-size: 2rem;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-weight: 200;
+          font-family: inherit;
+          border: 1px solid var(--color-grey-light-3);
+          vertical-align: middle;
+          color: var(--color-grey-dark-1);
+          user-select: none;
+          cursor: pointer; }
+          .app .calculator .row .col .digit:focus-visible {
+            outline: none; }
+          .app .calculator .row .col .digit:hover {
+            background-color: #d7d7d7; }
+          .app .calculator .row .col .digit:active {
+            transform: scale(0.98);
+            background-color: #cacaca; }
+          .app .calculator .row .col .digit.true {
+            background-color: var(--color-primary);
+            margin-right: 0;
+            color: var(--color-grey-light-1);
+            font-weight: 300; }
+            .app .calculator .row .col .digit.true:hover {
+              background-color: #3e2280; }
+            .app .calculator .row .col .digit.true:active {
+              background-color: #341d6c; }
+      .app .calculator .row .screen {
+        border-radius: .75rem;
+        width: 100%;
+        background-color: white;
+        border: 1px solid var(--color-grey-light-3);
+        text-align: right;
+        font-size: 3rem;
+        margin-bottom: 1rem;
+        padding: 1rem;
+        font-family: inherit;
+        font-weight: 300; }
+        .app .calculator .row .screen .input {
+          font-size: 14px;
+          color: var(--color-grey-dark-3);
+          font-weight: 500; }
