--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -7,12 +7,10 @@
   --color-grey-dark-2: #333;
   --color-grey-dark-3: #777;
   --color-grey-dark-4: #999; 
-  --color-primary: #5946D2;
-  --bs-primary: #5946D2;
-  --bs-blue: #5946D2;
+  --color-primary: #512DA8;
 }
-$color-primary: #5946D2;
-$color-tertiary: #F85977;
+$color-primary: #512DA8;
+$color-button: #f0f0f0;
 * {
   padding: 0;
   margin: 0; 
@@ -32,9 +30,7 @@ html {
   
   
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-weight: 400;
