--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -42,3 +42,119 @@ body {
 
     
 }
+
+.app{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 4rem 0;
+
+  & .calculator{
+      font-family: 'Roboto', sans-serif;
+      border: 1px solid var(--color-grey-light-4);
+      border-radius: .75rem;
+      display: flex;
+      flex-direction: column;
+      background-color: var(--color-grey-light-1);
+      padding: 1rem .75rem;
+      padding-bottom: 1.75rem;
+
+
+      & .row{
+          padding: .75rem;
+          padding-bottom: 0;
+          width: 100%;
+          display: flex;
+         & .col{
+              width: 25%;
+              margin-left: .5rem;
+
+              &:first-child{
+                  margin-left: 0
+              }
+
+              
+              &.zero{
+                  width: 50%;
+                  
+              }
+
+              
+
+              
+
+              & .digit{
+                  width: 3.5rem;
+                  height: 3.5rem;
+                  border-radius: .75rem;
+                  font-size: 2rem;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  font-weight: 200;
+                  font-family: inherit;
+                  border: 1px solid var(--color-grey-light-3);
+                  vertical-align: middle;
+                  color: var(--color-grey-dark-1);
+                  user-select: none;
+                  cursor: pointer;
+                  &:focus-visible{
+                      outline: none;
+                  }
+                  &:hover{
+                      background-color: darken($color-button, 10%);
+                  }
+
+                  &:active{
+                      transform: scale(.98);
+                      background-color: darken($color-button, 15%);
+                  }
+                  
+                  
+                  &.true{
+                      background-color: var(--color-primary);
+                      margin-right: 0;
+                      color: var(--color-grey-light-1);
+                      font-weight: 300;
+                      &:hover{
+                          background-color: darken($color-primary, 10%);
+                      }
+  
+                      &:active{
+                          background-color: darken($color-primary, 15%);
+                      }
+                      
+                  }
+
+                  
+
+                  
+              }
+          }
+
+          & .screen{
+              border-radius: .75rem;
+              width: 100%;
+              background-color: white;
+              border: 1px solid var(--color-grey-light-3);
+              text-align: right;
+              font-size: 3rem;
+              margin-bottom: 1rem;
+              padding: 1rem;
+              font-family: inherit;
+              font-weight: 300;
+
+              & .input{
+                  font-size: 14px;
+                  color: var(--color-grey-dark-3);
+                  font-weight: 500;
+                  min-height: 1.0625rem;
+              }
+              
+          }
+          
+      }
+  }
+}
